Changes between nazghul-0.1.2 and nazghul-0.1.3

gmcnutt:

--Bugfix: cursor was being shaded according to lighting conditions, but it
  should always be bright and clearly visible. I fixed this by changing the way
  the cursor is rendered so that now it is simply accepted as a special
  case. This allowed me to remove one or two unsightly hacks in the process.

--Bugfix: if you zoomed in while sailing the vehicle map was oriented
  wrong. This was because zoom-in is handled by combat and combat always
  rotated the vehicle maps so that ships were broadside to one another. I fixed
  this by adding a check to see if an opponent was specified and, if not, then
  I don't rotate for broadside. This is still something of a hack because not
  all vehicles will require a broadside in combat, so this behaviour assumes a
  ship vehicle. We could add a flag to the vehicle definition which species
  wether or not to do this, but currently nothing would take advantage of it
  and by the time we create something that does we might think of a better way
  to solve the problem.


Changes 2003/06/25
sglasby:
-- Implemented a terrain- and palette-saving command (^S)ave Map.

   The command is bound to CONTROL-S, and writes the current 
   terrain_palette and terrain_map to disk as:
       /tmp/nazghul.pal.pal_tag_name.PID.ghul
       /tmp/nazghul.map.map_tag_name.PID.ghul

   This is useful for map editors in conjunction with (^T)erraform.
   The saved palettes and maps can easily be used in hand-written 
   GhulScript with minimal to no hand-editing of the Nazghul-generated 
   palettes/maps.

   The next step is a command to teleport to a tag-named place, 
   and a command to create a new place of specified width and height.
   With these commands, map creation can be done entirely within Nazghul.
   (Place creation will of course await full game state saving.)

Changes 2003/06/25
sglasby:
-- Implemented a terrain-editing command (^T)erraform.
